--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "travis-build": "npm run build; npm rum readme"
   },
   "dependencies": {
+    "buefy": "^0.8.20",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -25,8 +25,6 @@
     "node-sass": "^4.12.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vue-template-compiler": "^2.6.11"
   }
 }
