--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "travis-build": "npm run build; npm rum readme"
   },
   "dependencies": {
-    "buefy": "^0.8.20",
+    "bulma": "^0.8.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
