--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ deploy:
   skip_cleanup: true
   keep_history: true
   github_token: $GITHUB_TOKEN
+  committer_from_gh: true
   local_dir: dist
   on:
     branch: dev
