--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.16.1",
     "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
